# GCAP_Mod

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
AttackGraph/: architecture.pl  genScript.sh  note.txt
AttackGraph/output/: AttackGraph.dot  AttackGraph.eps  AttackGraph.txt  AttackGraph.xml  VERTICES.CSV  architecture.pl  dynamic_decl.gen  interaction_rules.P  run.xwam  trace_output.P  translated_rules.P  xsb_log.txt
AttackGraph/output2/: ARCS.CSV  AttackGraph.dot  AttackGraph.eps  AttackGraph.txt  AttackGraph.xml  VERTICES.CSV  architecture2.pl  running_rules.P  trace_output.P  translated_rules.P  xsb_log.txt
AttackGraph/output3/: ARCS.CSV  AttackGraph.dot  AttackGraph.eps  AttackGraph.txt  AttackGraph.xml  VERTICES.CSV  architecture2.pl  running_rules.P  trace_output.P  translated_rules.P  xsb_log.txt
INAV_Flight_controller/: README.md
INAV_Flight_controller/AttackGraph/: Makefile  (+4 more)
Old_test_PX4/PX4_ROS/drone_controller/: package.xml
Old_test_PX4/PX4_ROS/drone_controller/scripts/2_P_S_example/: talker.py
Old_test_PX4/PX4_ROS/drone_controller/srv/: AddTwoInts.srv
Test_docker_sep/: Dockerfile.flight  Dockerfile.sensors  docker-compose.yml
dock_ros_px4_gaze11/: Dockerfile  README.md
docker-compose-inav/: Dockerfile.attack  Dockerfile.flightcontroller  Dockerfile.gps  README.md  attackMSP.py  attack_final.py  attack_final2.py  dati2.txt  docker-compose.yml  gps_coordinate_missione.txt  gps_nmea_SGTD_FG.py  gps_nmea_SGTD_FG_proxy.py  sendScapy.py  webNMEAgenerator.txt
drone_controller/: CMakeLists.txt
mission_test/: README.md
(+110 files in other folders)
