<?xml version="1.0"?>
<package format="2">
  <name>drone_controller</name>
  <version>0.0.0</version>
  <description>The drone_controller package</description>
    <author email="al.urraro@studenti.unina.it">alberto</author>
  <maintainer email="alberto@todo.todo">alberto</maintainer>
  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msg</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <exec_depend>message_runtime</exec_depend>



  <export>

  </export>
</package>
